--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>410</height>
+    <height>442</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -25,8 +25,8 @@
    <string>CAIGA</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>:/icons/Oxygen/icons/caiga.png</normaloff>:/icons/Oxygen/icons/caiga.png</iconset>
+   <iconset resource="caiga.qrc">
+    <normaloff>:/icons/icons/caiga.png</normaloff>:/icons/icons/caiga.png</iconset>
   </property>
   <property name="locale">
    <locale language="English" country="UnitedKingdom"/>
@@ -64,7 +64,7 @@
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="infoTab">
        <attribute name="title">
@@ -236,15 +236,15 @@
            </sizepolicy>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="histogramPage">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>195</width>
-             <height>185</height>
+             <width>178</width>
+             <height>96</height>
             </rect>
            </property>
            <attribute name="label">
@@ -281,8 +281,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>104</width>
-             <height>83</height>
+             <width>109</width>
+             <height>96</height>
             </rect>
            </property>
            <attribute name="label">
@@ -310,7 +310,13 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="blurMethodComboBox"/>
+             <widget class="QComboBox" name="blurMethodComboBox">
+              <item>
+               <property name="text">
+                <string>Gaussian</string>
+               </property>
+              </item>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -319,8 +325,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>166</width>
-             <height>193</height>
+             <width>159</width>
+             <height>40</height>
             </rect>
            </property>
            <attribute name="label">
@@ -492,7 +498,7 @@
               <double>5.000000000000000</double>
              </property>
              <property name="value">
-              <double>100.000000000000000</double>
+              <double>300.000000000000000</double>
              </property>
             </widget>
            </item>
@@ -524,13 +530,13 @@
               <double>1.000000000000000</double>
              </property>
              <property name="maximum">
-              <double>100.000000000000000</double>
+              <double>300.000000000000000</double>
              </property>
              <property name="singleStep">
               <double>5.000000000000000</double>
              </property>
              <property name="value">
-              <double>50.000000000000000</double>
+              <double>100.000000000000000</double>
              </property>
             </widget>
            </item>
@@ -604,7 +610,7 @@
      <x>0</x>
      <y>0</y>
      <width>700</width>
-     <height>22</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuProject">
@@ -877,7 +883,9 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="caiga.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionQuit</sender>
