--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -104,7 +104,7 @@
         <property name="margin">
          <number>0</number>
         </property>
-        <item row="1" column="1" alignment="Qt::AlignBottom">
+        <item row="3" column="2" alignment="Qt::AlignBottom">
          <widget class="QDialogButtonBox" name="ccButtonBox">
           <property name="enabled">
            <bool>false</bool>
@@ -120,88 +120,7 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
-         <widget class="QGroupBox" name="ccGroupBox">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-            <horstretch>1</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="title">
-           <string>Control Panel</string>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout_5">
-           <item>
-            <widget class="QRadioButton" name="cropCircleRadio">
-             <property name="text">
-              <string>Crop Circle</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QRadioButton" name="cropRectRadio">
-             <property name="text">
-              <string>Crop Rectangle</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="calibreButton">
-             <property name="toolTip">
-              <string>Draw a line then input its real size.</string>
-             </property>
-             <property name="text">
-              <string>Manually Calibre</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="autoCalibreButton">
-             <property name="toolTip">
-              <string>Extract calibration information inside the image (Experimental).</string>
-             </property>
-             <property name="text">
-              <string>Automatically Calibre</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="calibreLabel">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="text">
-              <string>Calibration</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QDoubleSpinBox" name="calibreDoubleSpinBox">
-             <property name="toolTip">
-              <string>Input calibration if already known.</string>
-             </property>
-             <property name="suffix">
-              <string> pixel:um</string>
-             </property>
-             <property name="decimals">
-              <number>4</number>
-             </property>
-             <property name="maximum">
-              <double>999.999900000000025</double>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="0" column="0" rowspan="2">
+        <item row="0" column="0" rowspan="4">
          <widget class="QImageDrawer" name="cropLabel" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -210,6 +129,102 @@
            </sizepolicy>
           </property>
          </widget>
+        </item>
+        <item row="0" column="2">
+         <layout class="QVBoxLayout" name="ccRightVerticalLayout">
+          <item>
+           <widget class="QGroupBox" name="ccModeGroupBox">
+            <property name="title">
+             <string>Operation Mode</string>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_6">
+             <item>
+              <widget class="QRadioButton" name="cropCircleRadio">
+               <property name="text">
+                <string>Crop Circle</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+               <attribute name="buttonGroup">
+                <string notr="true">buttonGroup</string>
+               </attribute>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="cropRectRadio">
+               <property name="text">
+                <string>Crop Rectangle</string>
+               </property>
+               <attribute name="buttonGroup">
+                <string notr="true">buttonGroup</string>
+               </attribute>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="calibreRadio">
+               <property name="text">
+                <string>Manually Calibre</string>
+               </property>
+               <attribute name="buttonGroup">
+                <string notr="true">buttonGroup</string>
+               </attribute>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="calibreLabel">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Calibration</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="calibreDoubleSpinBox">
+            <property name="toolTip">
+             <string>Input calibration if already known.</string>
+            </property>
+            <property name="suffix">
+             <string> pixel:μm</string>
+            </property>
+            <property name="decimals">
+             <number>4</number>
+            </property>
+            <property name="maximum">
+             <double>9999.999900000000707</double>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="autoCalibreButton">
+            <property name="text">
+             <string>Automatically Calibre</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="readCalibrationButton">
+            <property name="text">
+             <string>Read Calibration from File</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="saveCalibrationButton">
+            <property name="text">
+             <string>Save Calibration to File</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -936,4 +951,7 @@
    </hints>
   </connection>
  </connections>
+ <buttongroups>
+  <buttongroup name="buttonGroup"/>
+ </buttongroups>
 </ui>
